# Python-SimConnect-Expansion

./: Makefile  README.md  setup.cfg
SimConnect/: EventList.py
SimConnectExpansion/: EventList.py  FacilitiesList.py  RequestList.py  SimConnectExpansion.py  __init__.py
tests/: test_entity_plane.py  test_request.py  test_simconnect.py
