[metadata]
name = SimConnectExpansion
version = attr: SimConnectExpansion.__version__
description = Adds a pythonic wrapper for SimConnect SDK.
long_description = file: README.md
long_description_content_type = text/markdown
url = :
author = :
author_email = :
maintainer = :
maintainer_email = :
keywords = ctypes, FlightSim, SimConnect, Flight, Simulator
license = AGPL 3.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython


[options]
packages = SimConnectExpansion
python_requires = >=3.6
include_package_data=True
test_suite="tests"

[flake8]
exclude = .venv,.tox,dist,docs,build,*.egg,env,venv,.undodir

[bdist_wheel]
universal = 1

[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool:pytest]
minversion = 6.0
testpaths =
    tests
log_level = DEBUG
log_cli_level = DEBUG